# tab_parser

./: README.md  db.sqlite3  manage.py  pyproject.toml
tabparser/: asgi.py  settings.py  urls.py  wsgi.py
