[tool.poetry]
name = "tabparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
selenium = "^4.4.3"
Kivy = "^2.1.0"
lxml = "^4.9.1"
Django = "^4.1.1"
pylint = "^2.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
